<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="mr_button_content_description">Cast button</string>
    <string name="mr_cast_button_connected">Cast button. Connected</string>
    <string name="mr_cast_button_connecting">Cast button. Connecting</string>
    <string name="mr_cast_button_disconnected">Cast button. Disconnected</string>
    <string name="mr_chooser_searching">Finding devices</string>
    <string name="mr_chooser_title">Cast to</string>
    <string name="mr_controller_album_art">Album art</string>
    <string name="mr_controller_casting_screen">Casting screen</string>
    <string name="mr_controller_close_description">Close</string>
    <string name="mr_controller_collapse_group">Collapse</string>
    <string name="mr_controller_disconnect">Disconnect</string>
    <string name="mr_controller_expand_group">Expand</string>
    <string name="mr_controller_no_info_available">No info available</string>
    <string name="mr_controller_no_media_selected">No media selected</string>
    <string name="mr_controller_pause">Pause</string>
    <string name="mr_controller_play">Play</string>
    <string name="mr_controller_stop">Stop casting</string>
    <string name="mr_controller_volume_slider">Volume slider</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="dismiss_overlay_button_label">Quit</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在加载…</string>
    <string name="pull_to_refresh_release_label">松开更新…</string>
    <string name="time_difference_now">now</string>
    <string name="time_difference_short_days_and_hours"><g example="3d" id="short_days">%1$s</g> <g example="13h" id="short_hours">%2$s</g></string>
    <string name="time_difference_short_hours_and_minutes"><g example="13h" id="short_hours">%1$s</g> <g example="58m" id="short_minutes">%2$s</g></string>
    <string name="bad_request">无效请求</string>
    <string name="confirm_alarm_error">确认报警失败</string>
    <string name="connection_server_failed">连接服务失败</string>
    <string name="no_user">无效的用户名</string>
    <string name="null_point">无效数据</string>
    <string name="password_error">无效的密码</string>
    <string name="ptz_locked">云台被锁定</string>
    <string name="time_out">请求超时</string>
    <string name="timeplate_null">预案未配置时间模板</string>
    <string name="today">今天</string>
    <string name="user_already_login">用户已登录</string>
    <string name="user_freezing">用户已被冻结，请联系管理员</string>
    <string name="user_locked">用户已锁定，请稍后重试</string>
    <string name="username_password_error">用户名或密码错误</string>
    <string name="username_password_not_null">用户名或密码不能为空!</string>
    <string name="yesterday">昨天</string>
    <string name="pull_to_refresh_from_bottom_pull_label">下拉加载更多…</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">松开加载更多…</string>
    <string name="Account_cannot_be_empty">Please enter username and password.</string>
    <string name="Again_according_to_exit_the_program">再按一次退出程序</string>
    <string name="Baselibrary">基础库</string>
    <string name="BeingLoaded">正在加载</string>
    <string name="CameraPermissions">请在设置中开启摄像头权限</string>
    <string name="IPP_cannot_be_empty">Please enter IP and Port.</string>
    <string name="IP_cannot_beempty">Please enter the IP</string>
    <string name="IP_invalid">The IP address format is invalid</string>
    <string name="LastLoadingTime">最后加载时间</string>
    <string name="LastUpdateTime">最后更新时间</string>
    <string name="Log_back_in">Username or password error</string>
    <string name="Login_again">Password changed successfully, please login again.</string>
    <string name="Man">男</string>
    <string name="Network_anomalies">The request failed, please check the network Settings and try again.</string>
    <string name="PORT_cannot_beempty">Please enter the Port</string>
    <string name="Password_cannot_beempty">The password cannot be empty.</string>
    <string name="Phone_cannot_beempty">The username cannot be empty.</string>
    <string name="PullDownRefresh">下拉刷新</string>
    <string name="PullUpLoadMore">上拉加载更多</string>
    <string name="Refreshing">正在刷新</string>
    <string name="ReleaseStartLoading">释放开始加载</string>
    <string name="ReleaseStartRefresh">释放开始刷新</string>
    <string name="RequestWasAborted">请求失败，请检查网络后重试</string>
    <string name="Women">女</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="facility">Facility</string>
    <string name="map">Map</string>
    <string name="me">Me</string>
    <string name="right_title_cas">Casing Pressure</string>
    <string name="right_title_date">Date</string>
    <string name="right_title_fluid">Fluid Level Position</string>
    <string name="right_title_gas">Gas/day</string>
    <string name="right_title_oil">Oil/day</string>
    <string name="right_title_tub">Tubing Pressure</string>
    <string name="right_title_water">Water/day</string>
    <string name="wells">Wells</string>
</resources>